--- a/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
+++ b/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
@@ -587,8 +587,54 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Y0u-y7-wSh">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="7UN-Jb-Zwo">
                                         <rect key="frame" x="0.0" y="596" width="256" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7UN-Jb-Zwo" id="6s4-eO-H1u">
+                                            <rect key="frame" x="0.0" y="0.0" width="256" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Isn-3P-N49">
+                                                    <rect key="frame" x="8" y="0.0" width="240" height="43"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="helpsec" translatesAutoresizingMaskIntoConstraints="NO" id="fPG-mn-Azt">
+                                                            <rect key="frame" x="12" y="10" width="23" height="23"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="23" id="KJB-aF-DTH"/>
+                                                                <constraint firstAttribute="width" constant="23" id="cVO-Lp-aL8"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Help Section" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5DD-nY-CNJ">
+                                                            <rect key="frame" x="48" y="11" width="192" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="21" id="Bv5-Hc-fJL"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="fPG-mn-Azt" firstAttribute="top" secondItem="Isn-3P-N49" secondAttribute="top" constant="10" id="Dt7-gU-ANL"/>
+                                                        <constraint firstAttribute="bottom" secondItem="fPG-mn-Azt" secondAttribute="bottom" constant="10" id="FZH-rc-Tjg"/>
+                                                        <constraint firstItem="fPG-mn-Azt" firstAttribute="leading" secondItem="Isn-3P-N49" secondAttribute="leading" constant="12" id="GEF-e0-kUS"/>
+                                                        <constraint firstItem="5DD-nY-CNJ" firstAttribute="top" secondItem="Isn-3P-N49" secondAttribute="top" constant="11" id="OGI-ZE-USZ"/>
+                                                        <constraint firstAttribute="bottom" secondItem="5DD-nY-CNJ" secondAttribute="bottom" constant="11" id="RgK-Cq-1wg"/>
+                                                        <constraint firstItem="5DD-nY-CNJ" firstAttribute="leading" secondItem="fPG-mn-Azt" secondAttribute="trailing" constant="13" id="jSw-BA-zvM"/>
+                                                        <constraint firstAttribute="trailing" secondItem="5DD-nY-CNJ" secondAttribute="trailing" id="vEz-Jx-Vqo"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Isn-3P-N49" firstAttribute="top" secondItem="6s4-eO-H1u" secondAttribute="top" id="JL8-Q0-ydu"/>
+                                                <constraint firstItem="Isn-3P-N49" firstAttribute="trailing" secondItem="6s4-eO-H1u" secondAttribute="trailingMargin" id="MWo-L5-421"/>
+                                                <constraint firstItem="Isn-3P-N49" firstAttribute="leading" secondItem="6s4-eO-H1u" secondAttribute="leadingMargin" id="egr-4P-FT9"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Y0u-y7-wSh">
+                                        <rect key="frame" x="0.0" y="640" width="256" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Y0u-y7-wSh" id="GS1-Ft-LIj">
                                             <rect key="frame" x="0.0" y="0.0" width="256" height="43.666666666666664"/>
@@ -634,7 +680,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="q8J-eL-E3L">
-                                        <rect key="frame" x="0.0" y="640" width="256" height="44"/>
+                                        <rect key="frame" x="0.0" y="684" width="256" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="q8J-eL-E3L" id="ofk-F3-wLf">
                                             <rect key="frame" x="0.0" y="0.0" width="256" height="43.666666666666664"/>
@@ -1575,8 +1621,8 @@
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="version: 1.8.2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkk-3v-jiw">
-                                                <rect key="frame" x="123" y="61" width="72.666666666666686" height="15"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="version: 1.8.3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkk-3v-jiw">
+                                                <rect key="frame" x="123" y="61" width="73" height="15"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -5014,6 +5060,10 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PLl-Ra-yFC">
                                 <rect key="frame" x="29" y="676" width="356" height="40"/>
                                 <color key="backgroundColor" red="0.97905264250000001" green="0.77521144320000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="356" id="IEN-Od-HtC"/>
+                                    <constraint firstAttribute="height" constant="40" id="sK6-zv-3ye"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Have a Question?">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -5025,14 +5075,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="PLl-Ra-yFC" secondAttribute="bottom" constant="20" symbolic="YES" id="7ba-jS-ObF"/>
-                            <constraint firstItem="PLl-Ra-yFC" firstAttribute="top" secondItem="7LQ-cT-C2c" secondAttribute="bottom" constant="20" id="FFn-Hc-GZE"/>
+                            <constraint firstItem="PLl-Ra-yFC" firstAttribute="centerX" secondItem="7LQ-cT-C2c" secondAttribute="centerX" id="EL6-J7-0df"/>
                             <constraint firstAttribute="trailing" secondItem="7LQ-cT-C2c" secondAttribute="trailing" id="FTo-aa-qrb"/>
+                            <constraint firstItem="PLl-Ra-yFC" firstAttribute="top" secondItem="7LQ-cT-C2c" secondAttribute="bottom" constant="20" id="MNl-58-1ie"/>
                             <constraint firstItem="7LQ-cT-C2c" firstAttribute="leading" secondItem="Uhu-mG-nzH" secondAttribute="leading" id="TQA-Zx-LvP"/>
                             <constraint firstItem="7LQ-cT-C2c" firstAttribute="bottom" secondItem="EwE-Px-3iU" secondAttribute="top" constant="-80" id="XIX-2v-qOa"/>
                             <constraint firstItem="7LQ-cT-C2c" firstAttribute="top" secondItem="Uhu-mG-nzH" secondAttribute="top" id="Zil-cg-2oJ"/>
-                            <constraint firstItem="PLl-Ra-yFC" firstAttribute="leading" secondItem="Uhu-mG-nzH" secondAttribute="leadingMargin" constant="9" id="fjp-y6-AEm"/>
-                            <constraint firstItem="PLl-Ra-yFC" firstAttribute="centerX" secondItem="7LQ-cT-C2c" secondAttribute="centerX" id="mpy-Bb-8Bd"/>
+                            <constraint firstItem="PLl-Ra-yFC" firstAttribute="leading" secondItem="Uhu-mG-nzH" secondAttribute="leadingMargin" constant="9" id="bjL-7o-8ZL"/>
+                            <constraint firstAttribute="bottom" secondItem="PLl-Ra-yFC" secondAttribute="bottom" constant="20" symbolic="YES" id="sSf-hD-tDr"/>
                         </constraints>
                     </view>
                     <connections>
@@ -6093,6 +6143,7 @@
         <image name="closed2" width="24" height="24"/>
         <image name="createTicket" width="512" height="512"/>
         <image name="default_pic" width="512" height="512"/>
+        <image name="helpsec" width="512" height="512"/>
         <image name="ic_forward" width="512" height="512"/>
         <image name="inbox3" width="512" height="512"/>
         <image name="list2" width="24" height="24"/>
