--- a/Faveo Helpdesk Pro/LoginListMenuTableCell.xib
+++ b/Faveo Helpdesk Pro/LoginListMenuTableCell.xib
@@ -13,56 +13,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LoginListMenuTableCellId" rowHeight="89" id="KGk-i7-Jjw" customClass="LoginListMenuTableCell">
-            <rect key="frame" x="0.0" y="0.0" width="461" height="89"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LoginListMenuTableCellId" rowHeight="68" id="KGk-i7-Jjw" customClass="LoginListMenuTableCell">
+            <rect key="frame" x="0.0" y="0.0" width="363" height="68"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="461" height="88.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="363" height="67.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M9p-9f-mCv">
-                        <rect key="frame" x="0.0" y="7" width="460" height="72"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TW2-rz-uRa">
+                        <rect key="frame" x="0.0" y="1" width="363" height="66"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="unAssigned2" translatesAutoresizingMaskIntoConstraints="NO" id="JbZ-7C-IUl">
-                                <rect key="frame" x="21" y="9" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="611-ph-w4N"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="Ian-f0-FM6"/>
-                                    <constraint firstAttribute="width" constant="50" id="e6t-8o-IZW"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1. How to Login into iOS App using creadentials" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fmj-Ja-bUI">
-                                <rect key="frame" x="90" y="25" width="322.5" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1. What is the question ?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ylh-tw-ZiB">
+                                <rect key="frame" x="16" y="21" width="339" height="26"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="JbZ-7C-IUl" firstAttribute="top" secondItem="M9p-9f-mCv" secondAttribute="top" constant="9" id="6o0-ay-ady"/>
-                            <constraint firstAttribute="bottom" secondItem="JbZ-7C-IUl" secondAttribute="bottom" constant="13" id="Hdp-w6-9YS"/>
-                            <constraint firstItem="fmj-Ja-bUI" firstAttribute="leading" secondItem="JbZ-7C-IUl" secondAttribute="trailing" constant="19" id="LAV-kU-UMH"/>
-                            <constraint firstItem="JbZ-7C-IUl" firstAttribute="leading" secondItem="M9p-9f-mCv" secondAttribute="leading" constant="21" id="niX-bS-W9w"/>
-                            <constraint firstItem="JbZ-7C-IUl" firstAttribute="centerY" secondItem="fmj-Ja-bUI" secondAttribute="centerY" constant="0.5" id="wFD-tA-gsL"/>
+                            <constraint firstItem="ylh-tw-ZiB" firstAttribute="top" secondItem="TW2-rz-uRa" secondAttribute="top" constant="21" id="6uE-Ru-U3D"/>
+                            <constraint firstAttribute="bottom" secondItem="ylh-tw-ZiB" secondAttribute="bottom" constant="19" id="Chn-Ov-AcV"/>
+                            <constraint firstItem="ylh-tw-ZiB" firstAttribute="trailing" secondItem="TW2-rz-uRa" secondAttribute="trailingMargin" id="UMd-cQ-hSs"/>
+                            <constraint firstItem="ylh-tw-ZiB" firstAttribute="leading" secondItem="TW2-rz-uRa" secondAttribute="leading" constant="16" id="mV2-Ua-Icr"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="M9p-9f-mCv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="3o1-eh-jLZ"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="M9p-9f-mCv" secondAttribute="bottom" constant="-1" id="D0C-XL-jMW"/>
-                    <constraint firstItem="M9p-9f-mCv" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Ugk-RA-pdl"/>
-                    <constraint firstItem="M9p-9f-mCv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="vN9-RA-Obv"/>
+                    <constraint firstItem="TW2-rz-uRa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-10" id="d5u-24-EvD"/>
+                    <constraint firstItem="TW2-rz-uRa" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="nn9-q7-J25"/>
+                    <constraint firstItem="TW2-rz-uRa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="vDQ-tr-Z7l"/>
+                    <constraint firstAttribute="trailing" secondItem="TW2-rz-uRa" secondAttribute="trailing" id="ygv-CK-rSg"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
-                <outlet property="questionLabel" destination="fmj-Ja-bUI" id="Cfc-1I-YFy"/>
+                <outlet property="questionLabel" destination="ylh-tw-ZiB" id="kxT-Gt-fAz"/>
             </connections>
-            <point key="canvasLocation" x="56.5" y="44.5"/>
+            <point key="canvasLocation" x="56.5" y="44"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="unAssigned2" width="512" height="512"/>
-    </resources>
 </document>
